# web_vitals

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
scripts/: backfill_insights.py  config.py  dashboard.py  db.py  nr_client.py  schema.py  updater.py
scripts/dashboard/: __init__.py  app.py  charts.py  components.py  constants.py  data.py  formatters.py  sidebar.py
scripts/dashboard/tabs/: breakdowns.py  overview.py  page_analysis.py  top_pages.py
